add : front bootstrap example files, change some NGINX files

--- a/templates/single.html
+++ b/templates/single.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>뇌졸중 전조증상 자가진단 서비스</title>
+	<title>Architect &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -34,7 +34,8 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="../static/css/animate.css">
@@ -66,23 +67,22 @@
 		<div class="container">
 			<div class="top-menu">
 				<div class="row">
-					<div class="col-sm-5">
-						<div id="fh5co-logo"><a href="index.html">뇌졸중 전조증상 자가진단 서비스<span>.</span></a></div>
+					<div class="col-xs-2">
+						<div id="fh5co-logo"><a href="index.html">Architect<span>.</span></a></div>
 					</div>
-					<div class="col-sm-13 text-right menu-1">
+					<div class="col-xs-10 text-right menu-1">
 						<ul>
-                            <li class="has-dropdown"><a href="single.html">서비스 안내</a>
+							<li><a href="index.html">Portfolio</a></li>
+							<li class="active"><a href="single.html">Single</a></li>
+							<li class="has-dropdown"><a href="#">Dropdown</a>
 								<ul class="dropdown">
-									<li><a href="#">뇌졸중이란?</a></li>
-									<li><a href="#">자가진단 방법</a></li>
-									<li><a href="#">주변 병원 찾기</a></li>
-									<li><a href="#">제작 배경 및 설명</a></li>
+									<li><a href="#">Infrastructure</a></li>
+									<li><a href="#">Residential</a></li>
+									<li><a href="#">Environmental</a></li>
+									<li><a href="#">Megabuilders</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html">자가진단</a></li>
-							<li><a href="single.html">결과제출</a></li>
-
-							<li><a href="contact.html">문의</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -90,13 +90,11 @@
 			</div>
 		</div>
 	</nav>
-
-
-    <div class="container">
+	<div class="container">
 		<div id="fh5co-intro">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 col-md-pull-2">
-					<h3>6초에 1명씩 사망, '뇌졸중' <p> 빠른 자가 진단으로 소중한 골든 타임을 지킬 수 있습니다.</h3>
+					<h2>Architecture Building In Dublin, Ireland</h2>
 				</div>
 			</div>
 		</div>
@@ -106,36 +104,33 @@
 				<div class="col-md-4 col-md-push-8 sticky-parent">
 					<div class="detail" id="sticky_item">
 						<div class="animate-box">
-							<h3>AI로 손쉬운 뇌졸중 자가진단</h3>
-							<span>순천향대학교 의료IT공학과 20185119 이재헌</span>
-                            <p>- 한쪽 얼굴에 안면 떨림과 마비가 온다.</p>
-                            <p>- 팔다리에, 힘이 없고 감각이 무뎌진다.</p>
-                            <p>- 말할 때, 발음이 이상하다.</p>
-                            <p>- 증상이 발생하면 바로 119로 전화한다.</p>
-							<a class="btn btn-primary btn-demo" href="#"></i>자가진단 시작하기</a>
-                            <a class="btn btn-primary btn-demo" href="#"></i>진단 결과 확인하기</a>
+							<h2>Dublin Stadium</h2>
+							<span>Architectural Design</span>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius. </p>
+							<p><a class="btn btn-primary btn-demo" href="#"></i> View Project</a></p>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-md-7 col-md-pull-4 image-content">
-                    <div class="image-item  animate-box">
-						<img src="../static/images/whats_stroke.jpg" class="img-responsive">
+					<div class="image-item  animate-box">
+						<img src="../static/images/portfolio-5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 					<div class="image-item  animate-box">
-						<img src="../static/images/stroke_fast.jpg" class="img-responsive">
+						<img src="../static/images/portfolio-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 					<div class="image-item  animate-box">
-						<img src="../static/images/stroke_image.jpg" class="img-responsive">
+						<img src="../static/images/portfolio-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 					<div class="image-item  animate-box">
-						<img src="../static/images/portfolio-3.jpg" class="img-responsive">
+						<img src="../static/images/portfolio-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 					<div class="image-item  animate-box">
-						<img src="../static/images/portfolio-7.jpg" class="img-responsive">
+						<img src="../static/images/portfolio-7.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					</div>
 				</div>
-
+				
 			</div>
 		</div>
 	</div><!-- END container-wrap -->
@@ -144,36 +139,37 @@
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
-					<h4>주의 사항</h4>
-					<p>본 서비스는 정보 참조 용도로 활용 가능하며, 정확한 개인 증상의 파악은 의료 기관 내방을 통해 진행하시기 바랍니다. 의학 소견을 나타낸 것이 아니며, 서비스 제공자의 법률적 책임이 없음을 알려드립니다. 시의적, 물리적 환경에 따라 변경된 의학적 이견을 가질 수 있으며, 의학적 소견이 상이한 여러 의견을 모두 수렴하지는 않습니다.</p>
+					<h4>About Carbon</h4>
+					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
-					<h4>추가 정보</h4>
+					<h4>Latest Projects</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="https://health.kdca.go.kr/healthinfo/biz/health/ccvdInfo/ccvcdInfo/cbvcacdInfoMain.do">질병관리청 국가건강정보포털</a></li>
-						<li><a href="https://www.msdmanuals.com/ko-kr/%ED%99%88/%EB%87%8C,-%EC%B2%99%EC%88%98,-%EC%8B%A0%EA%B2%BD-%EC%9E%A5%EC%95%A0/%EB%87%8C%EC%A1%B8%EC%A4%91-cva/%EB%87%8C%EC%A1%B8%EC%A4%91-%EA%B0%9C%EC%9A%94">MSD 매뉴얼 - 일반인용</a></li>
-						<li><a href="https://www.stroke.or.kr/stroke/?doc=3">대한뇌졸중학회</a></li>
-						<li><a href="https://ko.wikipedia.org/wiki/%EB%87%8C%EC%A1%B8%EC%A4%91">위키백과</a></li>
+						<li><a href="#">JBC Stadium</a></li>
+						<li><a href="#">T-Mobile Arena</a></li>
+						<li><a href="#">Target Field</a></li>
+						<li><a href="#">London Stadium</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3 col-md-push-1">
-					<h4>바로가기</h4>
+					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">메인 페이지</a></li>
-						<li><a href="#">자가 진단</a></li>
-						<li><a href="#">결과 확인</a></li>
-						<li><a href="#">서비스 안내</a></li>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Work</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">About us</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3">
-					<h4>문의 정보</h4>
+					<h4>Contact Information</h4>
 					<ul class="fh5co-footer-links">
-						<li>순천향대학교 의료IT공학과<br>20185119 이재헌</li>
-						<li>shmom467@hanmail.net</li>
-						<li><a href="http://이재헌.kr">이재헌.kr</a></li>
-						<li>충청남도 아산시 신창면 순천향로 22</li>
+						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
+						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
+						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
+						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
 					</ul>
 				</div>
 
@@ -182,7 +178,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">순천향대학교 의료IT공학과 20185119 이재헌 All Rights Reserved.</small>
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
@@ -196,7 +192,7 @@
 				</div>
 			</div>
 		</footer>
-	</div><!-- END container -->
+	</div><!-- END container-wrap -->
 	</div>
 
 	<div class="gototop js-top">
