--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,223 +1,227 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Architect &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Architect &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Free HTML5 Website Template by freehtml5.co"/>
+    <meta name="keywords"
+          content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"/>
+    <meta name="author" content="freehtml5.co"/>
 
-	<!-- 
-	//////////////////////////////////////////////////////
+    <!--
+    //////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+    FREE HTML5 TEMPLATE
+    DESIGNED & DEVELOPED by FreeHTML5.co
 
-	//////////////////////////////////////////////////////
-	 -->
+    Website: 		http://freehtml5.co/
+    Email: 			info@freehtml5.co
+    Twitter: 		http://twitter.com/fh5co
+    Facebook: 		https://www.facebook.com/fh5co
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+    //////////////////////////////////////////////////////
+     -->
 
-	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i" rel="stylesheet">
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="../static/css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="../static/css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="../static/css/bootstrap.css">
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content=""/>
+    <meta property="og:image" content=""/>
+    <meta property="og:url" content=""/>
+    <meta property="og:site_name" content=""/>
+    <meta property="og:description" content=""/>
+    <meta name="twitter:title" content=""/>
+    <meta name="twitter:image" content=""/>
+    <meta name="twitter:url" content=""/>
+    <meta name="twitter:card" content=""/>
 
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="../static/css/flexslider.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i" rel="stylesheet">
 
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="../static/css/style.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="../static/css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="../static/css/icomoon.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
 
-	<!-- Modernizr JS -->
-	<script src="../static/js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+    <!-- Flexslider  -->
+    <link rel="stylesheet" href="../static/css/flexslider.css">
 
-	</head>
-	<body>
-		
-	<div class="fh5co-loader"></div>
-	
-	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container">
-			<div class="top-menu">
-				<div class="row">
-					<div class="col-sm-2">
-						<div id="fh5co-logo"><a href="index.html">Architect<span>.</span></a></div>
-					</div>
-					<div class="col-sm-10 text-right menu-1">
-						<ul>
-							<li><a href="index.html">Portfolio</a></li>
-							<li><a href="single.html">Single</a></li>
-							<li class="has-dropdown"><a href="single.html">Dropdown</a>
-								<ul class="dropdown">
-									<li><a href="#">Infrastructure</a></li>
-									<li><a href="#">Residential</a></li>
-									<li><a href="#">Environmental</a></li>
-									<li><a href="#">Megabuilders</a></li>
-								</ul>
-							</li>
-							<li class="active"><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				
-			</div>
-		</div>
-	</nav>
-	<div class="container">
-		<div id="fh5co-intro">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 col-md-pull-2">
-					<h2>Contact Us</h2>
-				</div>
-			</div>
-		</div>
-		<div id="fh5co-contact">
-			<div class="row">
-				<div class="col-md-4 animate-box">
-					<h3>Contact Information</h3>
-					<ul class="contact-info">
-						<li><i class="icon-location4"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone3"></i>+ 1235 2355 98</li>
-						<li><i class="icon-location3"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
-					</ul>
-				</div>
-				<div class="col-md-8 animate-box">
-					<div class="form-wrap">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Name">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Email">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<textarea name="" class="form-control" id="" cols="30" rows="15" placeholder="Message"></textarea>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="submit" value="Send Message" class="btn btn-primary btn-modify">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div><!-- END container -->
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="../static/css/style.css">
 
-	<div class="container">
-		<footer id="fh5co-footer" role="contentinfo">
-			<div class="row">
-				<div class="col-md-3 fh5co-widget">
-					<h4>About Carbon</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-				</div>
-				<div class="col-md-3 col-md-push-1">
-					<h4>Latest Projects</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">JBC Stadium</a></li>
-						<li><a href="#">T-Mobile Arena</a></li>
-						<li><a href="#">Target Field</a></li>
-						<li><a href="#">London Stadium</a></li>
-					</ul>
-				</div>
+    <!-- Modernizr JS -->
+    <script src="../static/js/modernizr-2.6.2.min.js"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
 
-				<div class="col-md-3 col-md-push-1">
-					<h4>Links</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About us</a></li>
-					</ul>
-				</div>
+</head>
+<body>
 
-				<div class="col-md-3">
-					<h4>Contact Information</h4>
-					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
-					</ul>
-				</div>
+<div class="fh5co-loader"></div>
 
-			</div>
+<div id="page">
+    <nav class="fh5co-nav" role="navigation">
+        <div class="container">
+            <div class="top-menu">
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div id="fh5co-logo"><a href="index.html">Architect<span>.</span></a></div>
+                    </div>
+                    <div class="col-sm-10 text-right menu-1">
+                        <ul>
+                            <li><a href="index.html">Portfolio</a></li>
+                            <li><a href="single.html">Single</a></li>
+                            <li class="has-dropdown"><a href="single.html">Dropdown</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Infrastructure</a></li>
+                                    <li><a href="#">Residential</a></li>
+                                    <li><a href="#">Environmental</a></li>
+                                    <li><a href="#">Megabuilders</a></li>
+                                </ul>
+                            </li>
+                            <li class="active"><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
 
-			<div class="row copyright">
-				<div class="col-md-12 text-center">
-					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-					</p>
-				</div>
-			</div>
-		</footer>
-	</div><!-- END container -->
-	</div>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div id="fh5co-intro">
+            <div class="row animate-box">
+                <div class="col-md-8 col-md-offset-2 col-md-pull-2">
+                    <h2>Contact Us</h2>
+                </div>
+            </div>
+        </div>
+        <div id="fh5co-contact">
+            <div class="row">
+                <div class="col-md-4 animate-box">
+                    <h3>Contact Information</h3>
+                    <ul class="contact-info">
+                        <li><i class="icon-location4"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
+                        <li><i class="icon-phone3"></i>+ 1235 2355 98</li>
+                        <li><i class="icon-location3"></i><a href="#">info@yoursite.com</a></li>
+                        <li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-8 animate-box">
+                    <div class="form-wrap">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <textarea name="" class="form-control" id="" cols="30" rows="15"
+                                              placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="submit" value="Send Message" class="btn btn-primary btn-modify">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!-- END container -->
 
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
-	</div>
-	
-	<!-- jQuery -->
-	<script src="../static/js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="../static/js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="../static/js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="../static/js/jquery.waypoints.min.js"></script>
-	<!-- Flexslider -->
-	<script src="../static/js/jquery.flexslider-min.js"></script>
-	<!-- Sticky Kit -->
-	<script src="../static/js/sticky-kit.min.js"></script>
-	<!-- Main -->
-	<script src="../static/js/main.js"></script>
+    <div class="container">
+        <footer id="fh5co-footer" role="contentinfo">
+            <div class="row">
+                <div class="col-md-3 fh5co-widget">
+                    <h4>About Carbon</h4>
+                    <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta
+                        adipisci architecto culpa amet.</p>
+                </div>
+                <div class="col-md-3 col-md-push-1">
+                    <h4>Latest Projects</h4>
+                    <ul class="fh5co-footer-links">
+                        <li><a href="#">JBC Stadium</a></li>
+                        <li><a href="#">T-Mobile Arena</a></li>
+                        <li><a href="#">Target Field</a></li>
+                        <li><a href="#">London Stadium</a></li>
+                    </ul>
+                </div>
 
-	</body>
+                <div class="col-md-3 col-md-push-1">
+                    <h4>Links</h4>
+                    <ul class="fh5co-footer-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About us</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-3">
+                    <h4>Contact Information</h4>
+                    <ul class="fh5co-footer-links">
+                        <li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
+                        <li><a href="tel://1234567920">+ 1235 2355 98</a></li>
+                        <li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
+                        <li><a href="http://gettemplates.co">gettemplates.co</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="row copyright">
+                <div class="col-md-12 text-center">
+                    <p>
+                        <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
+                        <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a>
+                            Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+                    </p>
+                    <p>
+                    <ul class="fh5co-social-icons">
+                        <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        <li><a href="#"><i class="icon-facebook"></i></a></li>
+                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </div><!-- END container -->
+</div>
+
+<div class="gototop js-top">
+    <a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
+</div>
+
+<!-- jQuery -->
+<script src="../static/js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="../static/js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<script src="../static/js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="../static/js/jquery.waypoints.min.js"></script>
+<!-- Flexslider -->
+<script src="../static/js/jquery.flexslider-min.js"></script>
+<!-- Sticky Kit -->
+<script src="../static/js/sticky-kit.min.js"></script>
+<!-- Main -->
+<script src="../static/js/main.js"></script>
+
+</body>
 </html>
 
