add : "contact page, SQLAlchemy DB connection - contact page"

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -68,22 +68,23 @@
         <div class="container">
             <div class="top-menu">
                 <div class="row">
-                    <div class="col-sm-2">
-                        <div id="fh5co-logo"><a href="index.html">Architect<span>.</span></a></div>
+                    <div class="col-sm-6">
+                        <div id="fh5co-logo"><a href="index.html">뇌졸중 전조증상 자가진단 서비스<span>.</span></a></div>
                     </div>
-                    <div class="col-sm-10 text-right menu-1">
+                    <div class="col-sm-13 text-right menu-1">
                         <ul>
-                            <li><a href="index.html">Portfolio</a></li>
-                            <li><a href="single.html">Single</a></li>
-                            <li class="has-dropdown"><a href="single.html">Dropdown</a>
+                            <li class="has-dropdown"><a href="single.html">서비스 안내</a>
                                 <ul class="dropdown">
-                                    <li><a href="#">Infrastructure</a></li>
-                                    <li><a href="#">Residential</a></li>
-                                    <li><a href="#">Environmental</a></li>
-                                    <li><a href="#">Megabuilders</a></li>
+                                    <li><a href="#">뇌졸중이란?</a></li>
+                                    <li><a href="#">자가진단 방법</a></li>
+                                    <li><a href="#">주변 병원 찾기</a></li>
+                                    <li><a href="#">제작 배경 및 설명</a></li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">자가진단</a></li>
+                            <li><a href="single.html">결과제출</a></li>
+
+                            <li><a href="contact.html">문의</a></li>
                         </ul>
                     </div>
                 </div>
@@ -91,92 +92,104 @@
             </div>
         </div>
     </nav>
+
     <div class="container">
         <div id="fh5co-intro">
             <div class="row animate-box">
                 <div class="col-md-8 col-md-offset-2 col-md-pull-2">
-                    <h2>Contact Us</h2>
+                    <h2>문의하기</h2>
                 </div>
             </div>
         </div>
-        <div id="fh5co-contact">
+
+        <div id="fh4co-contact">
             <div class="row">
                 <div class="col-md-4 animate-box">
-                    <h3>Contact Information</h3>
+                    <h3>문의 정보</h3>
                     <ul class="contact-info">
-                        <li><i class="icon-location4"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-                        <li><i class="icon-phone3"></i>+ 1235 2355 98</li>
-                        <li><i class="icon-location3"></i><a href="#">info@yoursite.com</a></li>
-                        <li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+                        <li><i class="icon-location4"></i>순천향대학교 의료IT공학과 20185119 이재헌</li>
+                        <li><i class="icon-phone3"></i>shmom467@hanmail.net</li>
+                        <li><i class="icon-location3"></i><a href="이재헌.kr">Github</a></li>
+                        <li><i class="icon-globe2"></i>충청남도 아산시 신창면 순천향로 22</li>
                     </ul>
                 </div>
+            <form method="POST" action="#">
                 <div class="col-md-8 animate-box">
                     <div class="form-wrap">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Name">
+                                    <input type="text" class="form-control" placeholder="이름" name="name">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Email">
+                                    <input type="text" class="form-control" placeholder="이메일" name="email">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea name="" class="form-control" id="" cols="30" rows="15"
-                                              placeholder="Message"></textarea>
+                                    <input type="text" class="form-control" placeholder="제목" name="title">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <input type="submit" value="Send Message" class="btn btn-primary btn-modify">
+                                    <input type="text" class="form-control" placeholder="문의 내용" name="question"
+                                        style="width: 100%; height: 300px;">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="submit" value="문의 보내기" class="btn btn-primary btn-modify">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </form></div>
         </div>
     </div><!-- END container -->
+
 
     <div class="container">
         <footer id="fh5co-footer" role="contentinfo">
             <div class="row">
                 <div class="col-md-3 fh5co-widget">
-                    <h4>About Carbon</h4>
-                    <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta
-                        adipisci architecto culpa amet.</p>
+                    <h4>주의 사항</h4>
+                    <p>본 서비스는 정보 참조 용도로 활용 가능하며, 정확한 개인 증상의 파악은 의료 기관 내방을 통해 진행하시기 바랍니다. 의학 소견을 나타낸 것이 아니며, 서비스 제공자의 법률적
+                        책임이 없음을 알려드립니다. 시의적, 물리적 환경에 따라 변경된 의학적 이견을 가질 수 있으며, 의학적 소견이 상이한 여러 의견을 모두 수렴하지는 않습니다.</p>
                 </div>
                 <div class="col-md-3 col-md-push-1">
-                    <h4>Latest Projects</h4>
+                    <h4>추가 정보</h4>
                     <ul class="fh5co-footer-links">
-                        <li><a href="#">JBC Stadium</a></li>
-                        <li><a href="#">T-Mobile Arena</a></li>
-                        <li><a href="#">Target Field</a></li>
-                        <li><a href="#">London Stadium</a></li>
+                        <li>
+                            <a href="https://health.kdca.go.kr/healthinfo/biz/health/ccvdInfo/ccvcdInfo/cbvcacdInfoMain.do">질병관리청
+                                국가건강정보포털</a></li>
+                        <li>
+                            <a href="https://www.msdmanuals.com/ko-kr/%ED%99%88/%EB%87%8C,-%EC%B2%99%EC%88%98,-%EC%8B%A0%EA%B2%BD-%EC%9E%A5%EC%95%A0/%EB%87%8C%EC%A1%B8%EC%A4%91-cva/%EB%87%8C%EC%A1%B8%EC%A4%91-%EA%B0%9C%EC%9A%94">MSD
+                                매뉴얼 - 일반인용</a></li>
+                        <li><a href="https://www.stroke.or.kr/stroke/?doc=3">대한뇌졸중학회</a></li>
+                        <li><a href="https://ko.wikipedia.org/wiki/%EB%87%8C%EC%A1%B8%EC%A4%91">위키백과</a></li>
                     </ul>
                 </div>
 
                 <div class="col-md-3 col-md-push-1">
-                    <h4>Links</h4>
+                    <h4>바로가기</h4>
                     <ul class="fh5co-footer-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">About us</a></li>
+                        <li><a href="index.html">메인 페이지</a></li>
+                        <li><a href="checkout.html">자가 진단</a></li>
+                        <li><a href="#">결과 확인</a></li>
+                        <li><a href="#">서비스 안내</a></li>
                     </ul>
                 </div>
 
                 <div class="col-md-3">
-                    <h4>Contact Information</h4>
+                    <h4>문의 정보</h4>
                     <ul class="fh5co-footer-links">
-                        <li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-                        <li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-                        <li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-                        <li><a href="http://gettemplates.co">gettemplates.co</a></li>
+                        <li>순천향대학교 의료IT공학과<br>20185119 이재헌</li>
+                        <li>shmom467@hanmail.net</li>
+                        <li><a href="http://이재헌.kr">이재헌.kr</a></li>
+                        <li>충청남도 아산시 신창면 순천향로 22</li>
                     </ul>
                 </div>
 
@@ -185,7 +198,7 @@
             <div class="row copyright">
                 <div class="col-md-12 text-center">
                     <p>
-                        <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
+                        <small class="block">순천향대학교 의료IT공학과 20185119 이재헌 All Rights Reserved.</small>
                         <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a>
                             Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
                     </p>
