--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col-sm-13 text-right menu-1">
                         <ul>
-                            <li class="has-dropdown"><a href="single.html">서비스 안내</a>
+                            <li class="has-dropdown"><a href="#">서비스 안내</a>
                                 <ul class="dropdown">
                                     <li><a href="#">뇌졸중이란?</a></li>
                                     <li><a href="#">자가진단 방법</a></li>
@@ -80,8 +80,8 @@
                                     <li><a href="#">제작 배경 및 설명</a></li>
                                 </ul>
                             </li>
-                            <li><a href="index.html">자가진단</a></li>
-                            <li><a href="single.html">결과제출</a></li>
+                            <li><a href="checkout.html">자가진단</a></li>
+                            <li><a href="#">결과제출</a></li>
 
                             <li><a href="contact.html">문의</a></li>
                         </ul>
@@ -166,8 +166,8 @@
                 <div class="col-md-3 col-md-push-1">
                     <h4>바로가기</h4>
                     <ul class="fh5co-footer-links">
-                        <li><a href="#">메인 페이지</a></li>
-                        <li><a href="#">자가 진단</a></li>
+                        <li><a href="index.html">메인 페이지</a></li>
+                        <li><a href="checkout.html">자가 진단</a></li>
                         <li><a href="#">결과 확인</a></li>
                         <li><a href="#">서비스 안내</a></li>
                     </ul>
