add : "add sounds, camera function (except number, sentence reading), video write, test.py"

--- a/templates/index.html
+++ b/templates/index.html
@@ -121,19 +121,19 @@
 
                 <div class="col-md-7 col-md-pull-4 image-content">
                     <div class="image-item  animate-box">
-                        <img src="../static/images/whats_stroke.jpg" class="img-responsive">
+                        <img src="../static/images/main_1.png" class="img-responsive">
                     </div>
                     <div class="image-item  animate-box">
-                        <img src="../static/images/stroke_fast.jpg" class="img-responsive">
+                        <img src="../static/images/main_2.png" class="img-responsive">
+                    </div>
+                    <div class="image-item  animate-box">
+                        <img src="../static/images/main_4.png" class="img-responsive">
+                    </div>
+                    <div class="image-item  animate-box">
+                        <img src="../static/images/main_3.png" class="img-responsive">
                     </div>
                     <div class="image-item  animate-box">
                         <img src="../static/images/stroke_image.jpg" class="img-responsive">
-                    </div>
-                    <div class="image-item  animate-box">
-                        <img src="../static/images/portfolio-3.jpg" class="img-responsive">
-                    </div>
-                    <div class="image-item  animate-box">
-                        <img src="../static/images/portfolio-7.jpg" class="img-responsive">
                     </div>
                 </div>
 
