--- a/templates/check-symptoms.html
+++ b/templates/check-symptoms.html
@@ -10,9 +10,6 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/list-groups/">
 
-    
-
-    
 
 <link href="../static/assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -68,7 +65,6 @@
         -webkit-overflow-scrolling: touch;
       }
     </style>
-
     
     <!-- Custom styles for this template -->
     <link href="../static/list-groups.css" rel="stylesheet">
@@ -96,11 +92,10 @@
   </symbol>
 </svg>
 
-{#<div class="b-example-divider"></div>#}
-
+<form action="check-symptoms.html" method="POST">
 <div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
 
-    <h4 class="mb-3">{{ name }}님의 증상과 과거 병력을 확인할게요.</h4><br><br>
+    <h4 class="mb-3">{{ name }}님의 증상과 과거 병력을 확인할게요.</h4><br>
 
     <h3> 갑자기 한쪽 얼굴, 팔, 다리 등에 힘이 빠지거나 저린 느낌이 든다. </h3>
   <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="" checked>
@@ -122,8 +117,11 @@
   <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios4">
     질문이 이해가 되지 않는다.
   </label>
+    <br><hr class="my-4">
+</div>
 
-    <br><br><h3> 갑자기 한쪽 눈의 시력이 나빠지고 눈이 침침하다. </h3>
+<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+    <h3> 갑자기 한쪽 눈의 시력이 나빠지고 눈이 침침하다. </h3>
   <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios5" value="" checked>
   <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios5">
     그렇다
@@ -143,9 +141,12 @@
   <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios8">
     질문이 이해가 되지 않는다.
   </label>
+    <br><hr class="my-4">
+</div>
 
-    <br><br><h3> 갑자기 한쪽 눈의 시력이 나빠지고 눈이 침침하다. </h3>
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios9" value="">
+<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+    <h3> 갑자기 말이 어눌해지거나 상대방의 말을 이해하지 못한다. </h3>
+  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios9" value="" checked>
   <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios9">
     그렇다
   </label>
@@ -164,16 +165,46 @@
   <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios12">
     질문이 이해가 되지 않는다.
   </label>
-
+    <br><hr class="my-4">
 </div>
 
+<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+    <h3> 심한 어지럼증과 번개나 망치로 맞은 듯한 아주 심한 두통이 있다. </h3>
+  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios13" value="" checked>
+  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios13">
+    그렇다
+  </label>
 
+  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios14" value="">
+  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios14">
+    아니다
+  </label>
 
-<div style="position: absolute; right: 0px; bottom: 0px; margin: 10px"> 여기에버튼추가예쩡(응급) </div>
+  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios15" value="">
+  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios15">
+    잘 모르겠다
+  </label>
+
+  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios16" value="">
+  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios16">
+    질문이 이해가 되지 않는다.
+  </label>
+    <br><hr class="my-4">
+</div>
+
+<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+     <h4>과거 병력, 특이사항, 진료 시 하고 싶은 말이 있다면 작성해 주세요.</h4>
+     <input type="text" class="form-control" name="mynametext" placeholder="내용을 입력하세요." style="width: 100%; height: 300px";>
+     <button class="w-100 btn btn-primary btn-lg" type="submit">다음</button> <br>
+
+</div>
+</form>
+
+{#과거병력 체크 혹은 textarea에 입력#}
+{#넘어가기 버튼 (제출)#}
 
 
     <script src="../static/assets/dist/js/bootstrap.bundle.min.js"></script>
-
       
   </body>
 </html>
