--- a/templates/face-recognition.html
+++ b/templates/face-recognition.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>{{title}}</title>
+    <title>test title</title>
 </head>
 <body>
 
 <div class="container">
     <div class="row">
         <div class="col-lg-8  offset-lg-2">
-            <h3 class="mt-5">{{time}}</h3>
+            <h3 class="mt-5">test time</h3>
             <img src="{{ url_for('video_feed') }}" width="100%">
         </div>
     </div>
