--- a/templates/result-search.html
+++ b/templates/result-search.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>뇌졸중 자가진단을 위한 개인정보 입력</title>
+    <title>Checkout example · Bootstrap v5.2</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/checkout/">
 
@@ -74,21 +74,16 @@
 <div class="container row" style="float: none; margin:0 auto">
     <div class="py-5 text-center">
         <br>
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-            <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
-        </svg>
-        <h2>주의 사항</h2>
-        <p class="lead">본 서비스는 정보 참조 용도로 활용 가능하며, 정확한 개인 증상의 파악은 의료 기관 내방을 통해 진행하시기 바랍니다. 의학 소견을 나타낸 것이 아니며, 서비스
-            제공자의 법률적 책임이 없음을 알려드립니다. 시의적, 물리적 환경에 따라 변경된 의학적 이견을 가질 수 있으며, 의학적 소견이 상이한 여러 의견을 모두 수렴하지는 않습니다.</p>
+        <h2>결과 조회</h2>
+        <p class="lead">결과 조회를 위한 정보를 입력해 주세요</p>
         <br>
     </div>
 </div>
 
 
 <div class="container row" style="float: none; margin:0 auto; width: 100%">
-    <h4 class="mb-3">뇌졸중 자가진단을 위한 개인정보 입력</h4>
-    <form class="needs-validation" method="POST" action="check-symptoms.html">
+    <h4 class="mb-3">뇌졸중 자가진단을 결과 조회하기</h4>
+    <form class="needs-validation" method="POST" action="#">
         <div class="col-12">
             <label for="name" class="form-label">이름</label>
             <div class="input-group has-validation">
@@ -105,31 +100,8 @@
             </div>
         </div> <br>
 
-        <div class="col-md-3">
-            <label for="age" class="form-label">나이</label>
-            <input type="text" class="form-control" id="age" placeholder="35" required name="age">
-            <div class="invalid-feedback">
-                나이를 입력 해 주세요.
-            </div>
-        </div> <br>
-
-        <div class="col-md-3">
-            <label for="sex" class="form-label">성별</label>
-            <input type="text" class="form-control" id="sex" placeholder="남성 / 여성" required name="sex">
-            <div class="invalid-feedback">
-                성별을 입력 해 주세요.
-            </div>
-        </div>
-
         <hr class="my-4">
-
         <button class="w-100 btn btn-primary btn-lg" type="submit">다음</button> <br><br>
-    </form>
-</div>
-
-<div class="container row" style="float: none; margin:0 auto; width: 100%">
-    <form action="check-symptoms.html" method="POST">
-        <button class="w-100 btn btn-primary btn-lg" type="submit">이름, 나이, 성별이 기억나지 않는다면?</button> <br>
     </form>
 </div>
 
