--- a/templates/contact.html
+++ b/templates/contact.html
@@ -64,34 +64,6 @@
 <div class="fh5co-loader"></div>
 
 <div id="page">
-    <nav class="fh5co-nav" role="navigation">
-        <div class="container">
-            <div class="top-menu">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div id="fh5co-logo"><a href="index.html">뇌졸중 전조증상 자가진단 서비스<span>.</span></a></div>
-                    </div>
-                    <div class="col-sm-13 text-right menu-1">
-                        <ul>
-                            <li class="has-dropdown"><a href="single.html">서비스 안내</a>
-                                <ul class="dropdown">
-                                    <li><a href="#">뇌졸중이란?</a></li>
-                                    <li><a href="#">자가진단 방법</a></li>
-                                    <li><a href="#">주변 병원 찾기</a></li>
-                                    <li><a href="#">제작 배경 및 설명</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="index.html">자가진단</a></li>
-                            <li><a href="single.html">결과제출</a></li>
-
-                            <li><a href="contact.html">문의</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </nav>
 
     <div class="container">
         <div id="fh5co-intro">
@@ -176,10 +148,10 @@
                 <div class="col-md-3 col-md-push-1">
                     <h4>바로가기</h4>
                     <ul class="fh5co-footer-links">
-                        <li><a href="index.html">메인 페이지</a></li>
-                        <li><a href="checkout.html">자가 진단</a></li>
-                        <li><a href="#">결과 확인</a></li>
-                        <li><a href="#">서비스 안내</a></li>
+                        <li><a href="home">메인 페이지</a></li>
+                        <li><a href="checkout">자가 진단</a></li>
+                        <li><a href="search-result">결과 확인</a></li>
+                        <li><a href="home">서비스 안내</a></li>
                     </ul>
                 </div>
 
