--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                                 </ul>
                             </li>
                             <li><a href="checkout.html">자가진단</a></li>
-                            <li><a href="result-search.html">결과조회</a></li>
+                            <li><a href="search-result.html">결과조회</a></li>
 
                             <li><a href="contact.html">문의</a></li>
                         </ul>
