--- a/templates/check-symptoms.html
+++ b/templates/check-symptoms.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>List groups · Bootstrap v5.2</title>
+    <title>뇌졸중 자가진단 서비스</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/list-groups/">
 
@@ -92,112 +92,112 @@
   </symbol>
 </svg>
 
-<form action="check-symptoms.html" method="POST">
-<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+<form action="/before" method="POST">
+    <div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
 
-    <h4 class="mb-3">{{ name }}님의 증상과 과거 병력을 확인할게요.</h4><br>
+        <h4 class="mb-3">{{ name }}님의 증상과 과거 병력을 확인할게요.</h4><br>
 
-    <h3> 갑자기 한쪽 얼굴, 팔, 다리 등에 힘이 빠지거나 저린 느낌이 든다. </h3>
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="" checked>
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios1">
-    그렇다
-  </label>
+        <h3> 갑자기 한쪽 얼굴, 팔, 다리 등에 힘이 빠지거나 저린 느낌이 든다. </h3>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="" checked>
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios1">
+        그렇다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios2" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios2">
-    아니다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios2" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios2">
+        아니다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios3" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios3">
-    잘 모르겠다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios3" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios3">
+        잘 모르겠다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios4">
-    질문이 이해가 되지 않는다.
-  </label>
-    <br><hr class="my-4">
-</div>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios4">
+        질문이 이해가 되지 않는다.
+      </label>
+        <br><hr class="my-4">
+    </div>
 
-<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
-    <h3> 갑자기 한쪽 눈의 시력이 나빠지고 눈이 침침하다. </h3>
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios5" value="" checked>
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios5">
-    그렇다
-  </label>
+    <div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+        <h3> 갑자기 한쪽 눈의 시력이 나빠지고 눈이 침침하다. </h3>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios5" value="" checked>
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios5">
+        그렇다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios6" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios6">
-    아니다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios6" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios6">
+        아니다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios7" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios7">
-    잘 모르겠다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios7" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios7">
+        잘 모르겠다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios8" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios8">
-    질문이 이해가 되지 않는다.
-  </label>
-    <br><hr class="my-4">
-</div>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios2" id="listGroupCheckableRadios8" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios8">
+        질문이 이해가 되지 않는다.
+      </label>
+        <br><hr class="my-4">
+    </div>
 
-<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
-    <h3> 갑자기 말이 어눌해지거나 상대방의 말을 이해하지 못한다. </h3>
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios9" value="" checked>
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios9">
-    그렇다
-  </label>
+    <div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+        <h3> 갑자기 말이 어눌해지거나 상대방의 말을 이해하지 못한다. </h3>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios9" value="" checked>
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios9">
+        그렇다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios10" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios10">
-    아니다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios10" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios10">
+        아니다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios11" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios11">
-    잘 모르겠다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios11" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios11">
+        잘 모르겠다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios12" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios12">
-    질문이 이해가 되지 않는다.
-  </label>
-    <br><hr class="my-4">
-</div>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios3" id="listGroupCheckableRadios12" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios12">
+        질문이 이해가 되지 않는다.
+      </label>
+        <br><hr class="my-4">
+    </div>
 
-<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
-    <h3> 심한 어지럼증과 번개나 망치로 맞은 듯한 아주 심한 두통이 있다. </h3>
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios13" value="" checked>
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios13">
-    그렇다
-  </label>
+    <div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+        <h3> 심한 어지럼증과 번개나 망치로 맞은 듯한 아주 심한 두통이 있다. </h3>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios13" value="" checked>
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios13">
+        그렇다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios14" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios14">
-    아니다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios14" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios14">
+        아니다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios15" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios15">
-    잘 모르겠다
-  </label>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios15" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios15">
+        잘 모르겠다
+      </label>
 
-  <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios16" value="">
-  <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios16">
-    질문이 이해가 되지 않는다.
-  </label>
-    <br><hr class="my-4">
-</div>
+      <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios4" id="listGroupCheckableRadios16" value="">
+      <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios16">
+        질문이 이해가 되지 않는다.
+      </label>
+        <br><hr class="my-4">
+    </div>
 
-<div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
-     <h4>과거 병력, 특이사항, 진료 시 하고 싶은 말이 있다면 작성해 주세요.</h4>
-     <input type="text" class="form-control" name="mynametext" placeholder="내용을 입력하세요." style="width: 100%; height: 300px";>
-     <button class="w-100 btn btn-primary btn-lg" type="submit">다음</button> <br>
+    <div class="list-group list-group-checkable d-grid gap-2 border-0 w-auto">
+         <h4>과거 병력, 특이사항, 진료 시 하고 싶은 말이 있다면 작성해 주세요.</h4>
+         <input type="text" class="form-control" name="comment" placeholder="내용을 입력하세요." style="width: 100%; height: 300px";>
+         <button class="w-100 btn btn-primary btn-lg" type="submit">다음</button> <br>
 
-</div>
+    </div>
 </form>
 
 {#과거병력 체크 혹은 textarea에 입력#}
