--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -88,7 +88,7 @@
 
 <div class="container row" style="float: none; margin:0 auto; width: 100%">
     <h4 class="mb-3">뇌졸중 자가진단을 위한 개인정보 입력</h4>
-    <form class="needs-validation" method="POST" action="check-symptoms.html">
+    <form class="needs-validation" method="POST" action="/check-symptoms">
         <div class="col-12">
             <label for="name" class="form-label">이름</label>
             <div class="input-group has-validation">
@@ -128,7 +128,7 @@
 </div>
 
 <div class="container row" style="float: none; margin:0 auto; width: 100%">
-    <form action="check-symptoms.html" method="POST">
+    <form action="/emergency" method="GET">
         <button class="w-100 btn btn-primary btn-lg" type="submit">이름, 나이, 성별이 기억나지 않는다면?</button> <br>
     </form>
 </div>
