add : "speech Recognition function, read, read-before page"

--- a/templates/read-before.html
+++ b/templates/read-before.html
@@ -87,25 +87,24 @@
     </div>
   </header>
 
-  <main class="px-3">
-      <br><br>
-        <div class="container">
-            <div class="row">
-                <div class="row col">
-                    <img src="{{ url_for('videoFeed') }}" width="200%">
-                </div>
-            </div>
-        </div>
-            <br><br><h4>1. 왼손을 3초간 들어주세요</h4>
-            <h4>2. 오른손을 3초간 들어주세요</h4>
-            <h4>3. 양손을 3초간 들어주세요</h4>
-            <h4>4. 3초간 눈을 깜빡여주세요</h4>
-      <br><a href="read-before" class="btn btn-lg btn-secondary fw-bold border-warning bg-warning">다음 단계로 넘어가기</a><br>
 
-  </main>
+
+
+<div id="speechContainer">
+
+
+    <h2 style="color:orange">계절이 지나가는 하늘에는 가을로 가득 차 있습니다.</h2><br><br>
+
+    <h3>준비가 되었다면 아래 버튼을 클릭 후 <br> 문장을 큰 소리로 또박또박 읽어주세요</h3><br>
+
+  <a href="read" class="btn btn-lg btn-secondary fw-bold border-white bg-white">문장 읽기</a>
+
+
+
+</div>
 
   <footer class="mt-auto text-white-50">
-    <br><p>순천향대학교 의료IT공학과 20185119 이재헌</p>
+    <p>순천향대학교 의료IT공학과 20185119 이재헌</p>
   </footer>
 </div>
 
